@@ -9,14 +9,13 @@ import org.jsoup.select.Elements;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URI;
 import java.net.URL;
 
 public class WebCrawler implements Runnable {
 
     // Those should be shared for all threads of the crawler
     public static int MAX_PAGES_COUNT;
-    public static int counter = 0;
+    public static int counter;
     MongoDB DB;
 
     /*
@@ -24,7 +23,9 @@ public class WebCrawler implements Runnable {
      */
     public WebCrawler(MongoDB DB) {
         this.DB = DB;
-        this.MAX_PAGES_COUNT = DB.MAX_PAGES_COUNT;
+        System.out.println("Crawled pages: " + DB.getPagesCount());
+        counter = DB.getPagesCount();
+        MAX_PAGES_COUNT = MongoDB.MAX_PAGES_COUNT;
     }
 
     @Override
@@ -33,64 +34,75 @@ public class WebCrawler implements Runnable {
     }
 
     /*
-     * The crawl method starts processing the URLs from the queue
+     * The crawl method starts processing the URLs from the seed
      */
     public void crawl() {
-        System.out.println(Thread.currentThread().getName() + ": Started Crawling");
+        // System.out.println(Thread.currentThread().getName() + ": Started Crawling");
 
         // while the number of crawled pages is less than the maximum
         while (DB.getPagesCount() < MAX_PAGES_COUNT) {
+            org.bson.Document doc = DB.popSeed();
 
-
-            // if the URLs queue is not empty then process the first URL in it
-            String url = "";
-            if (DB.getSeedCount() > 0)
-            {       url = DB.popSeed().getString("url");
-
-            System.out.println("Crawler : " + Thread.currentThread().getName() + " will process page : " + url);
-
-            if (checkRobots(url)) {
+            // if there is a link to process
+            if (doc != null) {
+                String url = doc.getString("url");
                 processPage(url);
+            } else { // else let the thread wait until there is an available link
+                try {
+                    synchronized (this) {
+                        this.wait();
+                    }
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
                 }
             }
         }
 
-        System.out.println(Thread.currentThread().getName() + ": Finished Crawling");
+        // System.out.println(Thread.currentThread().getName() + ": Finished Crawling");
     }
 
-    public boolean checkRobots(String link)
-    {
-        try
-        {
-            URI uri = new URI(link);
-            String robot = "https://" + uri.getHost();
-            robot += "/robots.txt";
-            System.out.println(robot);
+    public boolean checkRobots(String link) {
+        boolean notBlocked = true;
+
+        try {
+            // Create a URL instance from the link
+            URL url = new URL(link);
+
+            // Build the proper URL to the robots.txt file
+            String origin = url.getProtocol() + "://" + url.getHost();
+            String robot = origin + "/robots.txt";
+
+            // Create a BufferedReader to read the robots.txt file
             BufferedReader in = new BufferedReader(new InputStreamReader(new URL(robot).openStream()));
-            String line = null;
-            while((line = in.readLine()) != null) {
-                System.out.println(line);
+            String line;
+
+            // read the robots.txt until you find the user-agent line
+            while ((line = in.readLine()) != null) {
+                if (line.startsWith("User-agent: *"))
+                    break;
             }
-        } catch (Exception e) {
-            System.out.println("ErRRRRRRROR");
-        }
-        try
-        {
-            URI uri = new URI(link);
-            String robot = "http://" + uri.getHost();
-            robot += "/robots.txt";
-            System.out.println(robot);
-            BufferedReader in = new BufferedReader(new InputStreamReader(new URL(robot).openStream()));
-            String line = null;
-            while((line = in.readLine()) != null) {
-                System.out.println(line);
+
+            while ((line = in.readLine()) != null) {
+                if (line.startsWith("Disallow: ") && link.startsWith(origin + line.substring(10))) {
+                    notBlocked = false;
+                }
+                if (line.startsWith("Allow: ") && link.startsWith(origin + line.substring(8))) {
+                    notBlocked = true;
+                }
             }
+
         } catch (Exception e) {
-            System.out.println("ErRRRRRRROR");
+            System.out.println("Error in parsing robots.txt");
+            return false;
         }
 
-        return true;
+        if (!notBlocked) {
+            System.out.println(Thread.currentThread().getName() + ": " + link + " --> [Blocked]");
+        }
+
+        return notBlocked;
     }
+
     /**
      * Process the page of the given URL
      *
@@ -98,36 +110,41 @@ public class WebCrawler implements Runnable {
      */
     public void processPage(String URL) {
         if (URL == null) return;
-        if (URL.equals(""))return;
+        if (URL.equals("")) return;
 
         try {
             // Get the HTML document
             Document doc = Jsoup.connect(URL).ignoreContentType(true).get().clone(); // It may throw an IOException
+            // System.out.println("Crawler : " + Thread.currentThread().getName() + " will process page : " + URL);
 
             // if the number of crawled pages is less than the maximum
             if (DB.getPagesCount() < MAX_PAGES_COUNT) {
-                /*
-                 * This indicates a problem as the doc used by the MongoDB class is bson
-                 * and the one used here is jsoup and it can't be implicitly converted
-                 */
-                synchronized (this)
-                {
-                    counter++;
+                // Get the title of the page
+                String pageTitle = doc.title();
+
+                synchronized (this) {
+                    counter++; // Increase the counter of crawled pages
                 }
 
-                DB.insertpage(counter, URL, doc.html());
+                // Insert the page to the DB
+                DB.insertPage(pageTitle, counter, URL, doc.text());
 
-                // Get all the links in the page and add them to the end of the queue
+                // Check for the stopping condition
+                if (DB.getSeedCount() + DB.getPagesCount() >= MAX_PAGES_COUNT) return;
 
-                if(DB.getSeedCount()+DB.getPagesCount() >= MAX_PAGES_COUNT) return;
+                // Get all the links in the page
+                Elements links = doc.select("a[href]");
 
-                Elements questions = doc.select("a[href]");
-                for (Element link : questions) {
+                for (Element link : links) {
+                    // Check for the stopping condition
+                    if (DB.getSeedCount() + DB.getPagesCount() >= MAX_PAGES_COUNT) return;
+
                     if (link.attr("abs:href").contains("http")) {
-                        // Check if the given URL is already in database
-                        String link_url =link.attr("abs:href") ;
-                        if (link_url.endsWith("#")) {
-                            link_url = link_url.substring(0, link_url.length() - 1);
+
+                        // Check if the URL contains a # to exclude it from the URL
+                        String link_url = link.attr("abs:href");
+                        if (link_url.contains("#")) {
+                            link_url = link_url.substring(0, link_url.indexOf("#") - 1);
                         }
 
                         // Check if the URL ends with a / to exclude it from the URL
@@ -135,22 +152,26 @@ public class WebCrawler implements Runnable {
                             link_url = link_url.substring(0, link_url.length() - 1);
                         }
 
-                        if (DB.getpage(link_url).iterator().hasNext() || DB.getSeed(link_url).iterator().hasNext() ) {
-                            System.out.println(Thread.currentThread().getName() + ": " + link_url + " --> [DUPLICATED] and will not enter the Seed");
+                        // Check if the link has already been crawled
+                        if (DB.getPage(link_url).iterator().hasNext() || DB.getSeed(link_url).iterator().hasNext()) {
+                            System.out.println(Thread.currentThread().getName() + ": " + link_url + " --> [DUPLICATED]");
                         }
-                        else {
-                                DB.insertSeed(link_url);
+                        // Check if the link is disallowed in robots.txt
+                        else if (checkRobots(link_url)) {
+                            DB.insertSeed(link_url);
+                            synchronized (this) {
+                                this.notifyAll(); // Notify all waiting threads
+                            }
                         }
-
-
-
                     }
                 }
             }
-        } catch (IOException ignored) { // We ignored the catch block as we doesn't want it to do anything with exception
+
+            // System.out.println(Thread.currentThread().getName() + ": " + "finished crawling :" + URL);
+
+        } catch (IOException e) {
+            // We ignored the catch block as we doesn't want it to do anything with exception
+            e.printStackTrace();
         }
-
-        System.out.println(Thread.currentThread().getName() + ": " + "finished crawling :" +URL);
-
     }
 }
